# PICo24

./: CMakeLists.txt  README.md
Boards/CartBoy_RW_v2/: Board.c  CPU.txt  Heap.c  PICo24_Board.h  PICoBootCompanion.c  Peripherals.c  PinMux.c  PinMux.h  Standalone.ld  USBApp.ld
Boards/PotatoChip_PICo24/: Board.c  CPU.txt  Heap.c  PICoBootCompanion.c  Peripherals.c  PinMux.c  PinMux.h  USBApp.ld
Boards/PotatoPi_PICo24/: Board.c  CPU.txt  Heap.c  PICo24_Board.h  PICoBootCompanion.c  PICoBootCompanion.h  Peripherals.c  PinMux.c  PinMux.h  README.md  Standalone.ld  USBApp.ld
CMake/: FindXC16.cmake
Components/FreeRTOS/: FreeRTOS.h  FreeRTOSConfig.h  hooks.c  portable.h  tasks.c
Components/FreeRTOS/portable/: port.c  portasm_dsPIC.S
Components/Lua/: lauxlib.c  lbaselib.c  linit.c  llex.c  loslib.c  lstate.c  lstring.c  luaconf.h
Components/PICo24/: PICo24.h
Components/PICo24/Core/: Core.c  Core.h  Delay.c  Delay.h  FreeRTOS_Support.c  FreeRTOS_Support.h  IDESupport.h  Traps.c  Traps.h
Components/PICo24/PICoBootCompanion/: PICoBootCompanion.c  PICoBootCompanion.h
Components/PICo24/Peripherals/EXT_INT/: EXT_INT.c  EXT_INT.h
Components/PICo24/Peripherals/I2C/: I2C.c  I2C.h
Components/PICo24/Peripherals/SPI/: SPI.c  SPI.h
Components/PICo24/Peripherals/Timer/: Timer.c  Timer.h
Components/PICo24/Peripherals/UART/: UART.c  UART.h
Components/PICo24/Peripherals/USB/: usb.h  usb_cdc_common.h  usb_ch9.h  usb_common.h  usb_deluxe.c  usb_deluxe.h  usb_hal.h  usb_hal_16bit.c  usb_hal_local.h  usb_hal_pic24f.h
Components/PICo24/Peripherals/USB/Device/: usb_deluxe_device.c  usb_deluxe_device.h  usb_deluxe_device_audio.c  usb_deluxe_device_audio.h  usb_deluxe_device_cdc_acm.c  usb_deluxe_device_cdc_acm.h  usb_deluxe_device_cdc_ecm.c  usb_deluxe_device_cdc_ecm.h  usb_deluxe_device_cdc_ncm.c  usb_deluxe_device_cdc_ncm.h  usb_deluxe_device_hid.c  usb_deluxe_device_hid.h  usb_deluxe_device_midi.c  usb_deluxe_device_midi.h  usb_deluxe_device_msd.c  usb_deluxe_device_msd.h  usb_device.c  usb_device.h  usb_device_config.h  usb_device_descriptors.c  usb_device_events.c  usb_device_local.h
Components/PICo24/Peripherals/USB/Host/: usb_deluxe_host.c  usb_deluxe_host.h  usb_deluxe_host_hid.c  usb_deluxe_host_hid.h  usb_deluxe_host_hub.c  usb_deluxe_host_hub.h  usb_hid.h  usb_host.c  usb_host.h  usb_host_cdc.c  usb_host_cdc.h  usb_host_cdc_config.h  usb_host_cdc_interface.c  usb_host_cdc_interface.h  usb_host_config.c  usb_host_config.h  usb_host_events.c  usb_host_hid.c  usb_host_hid.h  usb_host_hid_config.h  usb_host_hid_parser.c  usb_host_hid_parser.h  usb_host_local.h  usb_struct_queue.h
Components/PICo24/UnixAPI/: mini_stdio.c  mini_stdio.h  mini_termios.c  mini_termios.h  mini_unistd.c  mini_unistd.h
Components/ScratchLibc/: ScratchLibc.h
Components/ScratchLibc/errno/: errno.h
Components/ScratchLibc/inttypes/: inttypes.h
Components/ScratchLibc/stdlib/: stdlib.h
Components/ScratchLibc/stdlib/malloc/: malloc.c  malloc.h
Components/ScratchLibc/stdlib/malloc/umm_malloc/: umm_info.c  umm_integrity.c  umm_malloc.c  umm_malloc.h  umm_malloc_cfg.h
Components/ScratchLibc/stdlib/malloc/umm_malloc_eds/: README.md  umm_eds_info.c  umm_eds_integrity.c  umm_eds_malloc.c  umm_eds_malloc.h  umm_eds_malloc_cfg.h
Components/ScratchLibc/string/: string.c  string.h
Components/lwip/src/: Filelists.cmake
Components/lwip/src/apps/http/: http_client.c
Components/lwip/src/apps/lwiperf/: lwiperf.c
Components/lwip/src/apps/sntp/: sntp.c
Components/lwip/src/core/: mem.c  sys_arch.c
Components/lwip/src/include/arch/: cc.h
Components/lwip/src/include/lwip/: arch.h  lwipopts.h  netif.h
Components/lwip/src/include/netif/ppp/: ppp.h  pppos.h
Components/lwip/src/netif/ppp/: magic.c  pppos.c  utils.c
